<resources>
    <string name="app_name">StudiuMontreal</string>
    <string name="email_label">Courriel</string>
    <string name="password_label">Mot de passe</string>
    <string name="login_label">Se Connecter</string>
    <string name="forgot_password_label">Mot de passe oublié?</string>
    <string name="wrong_email_password_combinaison_label">La combinaison courriel/mot de passe entrée est erronée.</string>

    <string name="forgot_password_title_label">Mot de passe oublié</string>
    <string name="forgot_password_reinitialise_label">Réinitialiser</string>
    <string name="forgot_password_message_sent_label">Un lien de réinitialisation a été envoyé par courriel. (Fonctionnalité non implémentée)</string>

    <string name="calendar_title_label">Calendrier</string>
    <string-array name="months_name">
        <item>Janvier</item>
        <item>Février</item>
        <item>Mars</item>
        <item>Avril</item>
        <item>Mai</item>
        <item>Juin</item>
        <item>Juillet</item>
        <item>Août</item>
        <item>Septembre</item>
        <item>Octobre</item>
        <item>Novembre</item>
        <item>Décembre</item>
    </string-array>

    <string name="sunday_letter">D</string>
    <string name="monday_letter">L</string>
    <string name="tuesday_letter">M</string>
    <string name="wednesday_letter">M</string>
    <string name="thursday_letter">J</string>
    <string name="friday_letter">V</string>
    <string name="saturday_letter">S</string>

    <string name="calendar_left_arrow_content_description">Mois précédent</string>
    <string name="calendar_right_arrow_content_description">Mois suivant</string>
</resources>